# Orlando-El-Bastardo

./: .gitignore  CLAUDE.md  LICENSE.md  PROJECT-DONE.md  PROJECT-TODO.md  README.md  oeb.config.json
data/: camera_grammar.json  resolver_map.json  standins.json
oeb-studio-harness/worker/: oeb_menu_bar.py  pyproject.toml  requirements.txt
oeb-studio-harness/worker/agent/: artifacts.py  capabilities.py  client.py  config.py  heartbeat.py  job_runner.py  main.py  registry.py  updater.py
oeb-studio-harness/worker/agent/adapters/: base.py  blender.py  ollama.py
oeb-studio-harness/worker/artifacts/0656039a-3d5a-4f93-93ec-7b42d2dd09b4/: ship_simple_spaceship_shaped_like_A.glb  ship_simple_spaceship_shaped_like_A.json
oeb-studio-harness/worker/artifacts/157d3123-8a6e-4885-ae21-98de1e1f477c/: asset_living_room_A.glb  asset_living_room_A.json
oeb-studio-harness/worker/artifacts/18b46673-69f9-4fab-bb9f-94351002353b/: ship_simple_spaceship_shaped_like_A.glb  ship_simple_spaceship_shaped_like_A.json
oeb-studio-harness/worker/artifacts/2132cbb1-565f-443f-9f55-468cc881f45e/: ship_simple_space_station_shaped_A.glb  ship_simple_space_station_shaped_A.json
oeb-studio-harness/worker/artifacts/24bbb34c-d281-41fb-8f54-921005dfe341/: ship_simple_space_station_A.glb  ship_simple_space_station_A.json
oeb-studio-harness/worker/config-examples/: gaming-pc.yml  mac-mini.yml  macbook-air.yml  render-mac-01.yml
oeb-studio-harness/worker/scripts/: apply-worker-update.sh  start-gaming-pc-worker.sh  start-local-worker.sh  status-local-worker.sh  stop-local-worker.sh
(+239 files in other folders)
