[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oeb-studio-harness-worker"
version = "0.1.0"
description = "Render and LLM worker agent for the Orlando El Bastardo Studio Harness."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.2",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
macos = [
  "rumps>=0.4.0",
]

[project.scripts]
oeb-worker-agent = "agent.main:main"
oeb-worker-menu-bar = "oeb_menu_bar:main"

[tool.setuptools]
py-modules = ["oeb_menu_bar"]

[tool.setuptools.packages.find]
include = ["agent", "agent.*"]
